--- a/style/main.css
+++ b/style/main.css
@@ -67,6 +67,15 @@ body {
   gap: 2em;
 }
 
+.sr-only {
+  position: absolute;
+  left: -10000px;
+  width: 1px;
+  height: 1px;
+  top: auto;
+  overflow: hidden;
+}
+
 .testimonial {
   padding: 2em 2.5em;
   color: hsl(0deg, 0%, 100%);
