--- a/style/main.scss
+++ b/style/main.scss
@@ -22,6 +22,15 @@ body {
   gap: 2em;
 }
 
+.sr-only {
+  position: absolute;
+  left: -10000px;
+  width: 1px;
+  height: 1px;
+  top: auto;
+  overflow: hidden;
+}
+
 .testimonial {
   padding: 2em 2.5em;
   color: $color-white;
